Organizing the backend routes
